Fixing Broken Styles

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,16 +1,31 @@
+@media (max-width: 420px) {
+    h3 {
+        display: none;
+    }
+    .nav {
+        display: none;
+    }
+}
+
+@media (min-width: 1000px) {
+    .cover-container {
+        max-width: 80vw;
+    }
+    
+    .lead {
+        font-size: 1.5vw;
+    }
+}
+
 body{
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    url("https://res.cloudinary.com/dnwkt7zdl/image/upload/v1704996558/YelpCamp/home_camp_gmtjzw.avif");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
-}
-
-.cover-container {
-    max-width: 60vw;
 }
 
 .nav-link {
